syntax = "proto3";
package seiprotocol.seichain.dex;

import "dex/enums.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Pair {
    Denom priceDenom = 1;
    Denom assetDenom = 2;
}

message BatchContractPair {
    string contractAddr = 1 [(gogoproto.jsontag) = "contractAddr"];
    repeated Pair pairs = 2 [(gogoproto.jsontag) = "pairs"];
}
